@@ -3,6 +3,9 @@ Eet 1.7.0
 Changes since Eet 1.6.0:
 --------------------------
 
+Additions:
+    * Add code to detect overrun and underrun during Eet Data Descriptor setup.
+
 Fixes:
     * Force destruction of all pending file when shuting down eet.
     * Make eet_dictionary thread safe.
